tests/stable/function/compile_fail/missing_check.rs
use pre::pre;

#[pre("is bar")]
fn foo() {}

fn main() {
    foo()
}
